<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:text="MAE BOOKING SYSTEM"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/textview_border"
        android:padding="12dp"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textcw"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="Causeway Link"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="115dp"
                android:layout_height="64dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                app:srcCompat="@drawable/cwlink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="018-1355876"
                android:textSize="20sp" />

            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="2 Travel"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cwlink"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="Detail"
                android:textColor="@color/black"
                app:backgroundTint="#E1D9D9" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/textview_border"
        android:padding="12dp"
        android:layout_margin="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textkkkl"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="KKKL"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="115dp"
                android:layout_height="64dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="012-7462558"
                android:textSize="20sp" />

            <TextView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="2 Travel"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/kkkl"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="Detail"
                android:textColor="@color/black"
                app:backgroundTint="#E1D9D9" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>